--- a/Client/CMakeLists.txt
+++ b/Client/CMakeLists.txt
@@ -6,4 +6,4 @@ set(CMAKE_CXX_STANDARD 17)
 set(GCC_COVERAGE_COMPILE_FLAGS "-pthread")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
 
-add_executable(Lab05 main.cpp Socket.cpp Socket.h)
+add_executable(Lab05 main.cpp ./TCP_Socket/Socket.cpp ./TCP_Socket/Socket.h)
