--- a/Client/CMakeLists.txt
+++ b/Client/CMakeLists.txt
@@ -8,5 +8,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 
 find_library(CryptoPP libcryptopp.so REQUIRED)
 
-add_executable(PDS_Project_Client main.cpp ./TCP_Socket/Socket.cpp ./TCP_Socket/Socket.h ./FileManager/File.cpp ./FileManager/File.h ./FileManager/Directory.cpp ./FileManager/Directory.h ./Communication/Communication.h usefull_functions/main_functions.h)
+add_executable(PDS_Project_Client main.cpp Entities/Socket/Socket.cpp Entities/Socket/Socket.h Entities/File/File.cpp Entities/File/File.h Entities/Directory/Directory.cpp Entities/Directory/Directory.h "Usefull functions/Communication/Communication.h" "Usefull functions/main_functions.h")
 target_link_libraries(PDS_Project_Client LINK_PUBLIC sqlite3 ${CryptoPP})
